--- a/pages/shipping.html
+++ b/pages/shipping.html
@@ -104,32 +104,85 @@
             style="text-align: center; margin-bottom: 2rem; font-family: 'Great Vibes', cursive; font-size: 3rem;">
             Shipping Policy</h1>
 
+        <div style="text-align: center; font-weight: bold; font-size: 1.5rem; margin-bottom: 2rem; color: #2d5a27;">
+            Rasobhoomi</div>
 
-        <p>Rasobhoomi offers flexible shipping options to suit customer preferences. Shipping charges are not fixed
-            and vary depending on the delivery method selected.</p>
+        <section style="margin-bottom: 2rem;">
+            <h3 style="color: #2d5a27; border-bottom: 1px solid #c1ff72; padding-bottom: 0.5rem;">1. Flexible Shipping
+                Options</h3>
+            <p>Rasobhoomi offers flexible shipping options to suit customer preferences. Shipping charges are not fixed
+                and vary depending on the delivery method selected and the destination.</p>
+        </section>
 
-        <h3>Available delivery methods include:</h3>
-        <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
-            <li>Courier service</li>
-            <li>Railway service</li>
-            <li>Bus service</li>
-            <li>Hand delivery</li>
-        </ul>
+        <section style="margin-bottom: 2rem;">
+            <h3 style="color: #2d5a27; border-bottom: 1px solid #c1ff72; padding-bottom: 0.5rem;">2. Available Delivery
+                Methods</h3>
+            <p>Customers can choose from the following delivery options:</p>
+            <ul style="list-style-type: none; padding-left: 0;">
+                <li style="padding: 0.5rem 0; border-bottom: 1px dashed #eee;">• Courier Service</li>
+                <li style="padding: 0.5rem 0; border-bottom: 1px dashed #eee;">• Railway Service</li>
+                <li style="padding: 0.5rem 0; border-bottom: 1px dashed #eee;">• Bus Service</li>
+                <li style="padding: 0.5rem 0; border-bottom: 1px dashed #eee;">• Hand Delivery</li>
+            </ul>
+            <p style="margin-top: 1rem;">The customer has full freedom to select the delivery method according to their
+                convenience, urgency, and location.</p>
+        </section>
 
-        <p>The customer has full freedom to choose how they want their plants delivered. The total shipping cost
-            depends on the selected method and the destination.</p>
+        <section style="margin-bottom: 2rem;">
+            <h3 style="color: #2d5a27; border-bottom: 1px solid #c1ff72; padding-bottom: 0.5rem;">3. Shipping Charges
+            </h3>
+            <ul style="list-style-type: disc; padding-left: 1.5rem;">
+                <li>Shipping charges depend on the selected delivery method and destination.</li>
+                <li>All shipping charges are the responsibility of the customer, unless otherwise clearly stated.</li>
+                <li>The total shipping cost will be communicated before dispatch.</li>
+            </ul>
+        </section>
 
-        <p>Shipping charges are always the responsibility of the customer unless otherwise stated. In cases where a
-            plant replacement is provided due to damage or plant death within 15 days, the replacement plant is sent
-            only after the customer pays the shipping charges.</p>
+        <section style="margin-bottom: 2rem;">
+            <h3 style="color: #2d5a27; border-bottom: 1px solid #c1ff72; padding-bottom: 0.5rem;">4. Plant Replacement
+                Shipping</h3>
+            <p>If a plant requires replacement due to damage or plant death within 15 days (as per Rasobhoomi’s plant
+                policy):</p>
+            <ul style="list-style-type: disc; padding-left: 1.5rem;">
+                <li>The replacement plant will be dispatched only after the customer pays the applicable shipping
+                    charges.</li>
+                <li>Shipping costs for replacement plants are also borne by the customer.</li>
+            </ul>
+        </section>
 
-        <p>Rasobhoomi takes care to pack plants properly before dispatch. However, delays or damage caused during
-            transit by third-party delivery services are beyond direct control.</p>
+        <section style="margin-bottom: 2rem;">
+            <h3 style="color: #2d5a27; border-bottom: 1px solid #c1ff72; padding-bottom: 0.5rem;">5. Packaging & Transit
+                Responsibility</h3>
+            <p>Rasobhoomi ensures that plants are packed carefully and securely before dispatch to minimize transit
+                risk. However:</p>
+            <ul style="list-style-type: disc; padding-left: 1.5rem;">
+                <li>Delays caused by third-party transport providers are beyond Rasobhoomi’s control.</li>
+                <li>Damage occurring during transit by courier, railway, bus, or other delivery services is not directly
+                    controlled by Rasobhoomi.</li>
+            </ul>
+        </section>
 
-        <p>Customers are advised to choose a delivery option that best suits their location and urgency. By
-            selecting a delivery method, the customer agrees to bear the associated costs and risks related to
-            transit.</p>
-        </div>
+        <section style="margin-bottom: 2rem;">
+            <h3 style="color: #2d5a27; border-bottom: 1px solid #c1ff72; padding-bottom: 0.5rem;">6. Customer
+                Responsibility</h3>
+            <p>Customers are advised to choose a delivery method that best suits their:</p>
+            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
+                <li>Location</li>
+                <li>Urgency</li>
+                <li>Handling safety</li>
+            </ul>
+            <p>By selecting a delivery option, the customer agrees to:</p>
+            <ul style="list-style-type: disc; padding-left: 1.5rem;">
+                <li>Bear the associated shipping costs</li>
+                <li>Accept transit-related risks linked to the chosen delivery method</li>
+            </ul>
+        </section>
+
+        <section style="margin-bottom: 2rem;">
+            <h3 style="color: #2d5a27; border-bottom: 1px solid #c1ff72; padding-bottom: 0.5rem;">7. Agreement</h3>
+            <p>By placing an order and selecting a delivery method, the customer acknowledges and agrees to this
+                Shipping Policy.</p>
+        </section>
     </main>
 
 
